Add controller to POST updated bookinstance  data

--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -30,10 +30,10 @@ block content
     div.form-group
       label(for='status') Status:
       select#status.form-control(type='select' placeholder='Select status' name='status' required='true')
-        option(value='Maintenance' selected=(bookinstance.status=='Maintenance')) Maintenance
-        option(value='Available' selected=(bookinstance.status=='Available')) Available
-        option(value='Loaned' selected=(bookinstance.status=='Loaned')) Loaned
-        option(value='Reserved' selected=(bookinstance.status=='Reserved')) Reserved
+        option(value='Maintenance' selected=(bookinstance===undefined ? false : bookinstance.status=='Maintenance')) Maintenance
+        option(value='Available' selected=(bookinstance===undefined ? false : bookinstance.status=='Available')) Available
+        option(value='Loaned' selected=(bookinstance===undefined ? false : bookinstance.status=='Loaned')) Loaned
+        option(value='Reserved' selected=(bookinstance===undefined ? false : bookinstance.status=='Reserved')) Reserved
 
     button.btn.btn-primary(type='submit') Submit
 
